--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ updated_html = """
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TSA Geospatial Project</title>
+  <title>TSA LOL Geospatial Project</title>
   <style>
     body {
       font-family: Arial, sans-serif;
